# gazebo-thesis-B

./: README.md  acados_sim.json
install/: local_setup.sh  setup.sh
log/: latest_build
logs/controller_mpc/xyz_sine_20251023_014317/: log.csv
logs/controller_mpc/xyz_sine_20251023_014440/: log.csv
logs/controller_pid/takeoff_fly_land_20251030_124929/: log.csv
logs/controller_pid/xyz_sine_20251021_122145/: log.csv
logs/controller_pid/xyz_sine_20251023_014228/: log.csv
logs/controller_pid/xyz_sine_20251023_142456/: log.csv
logs/controller_pid_landing_tests/takeoff_fly_land_20251030_125246/: log.csv
logs/controller_pid_landing_tests/takeoff_fly_land_20251030_125328/: log.csv
logs/controller_pid_landing_tests/takeoff_fly_land_20251030_125450/: log.csv
logs/controller_pid_landing_tests/takeoff_fly_land_20251030_125531/: log.csv
logs/controller_pid_landing_tests/takeoff_fly_land_20251030_125612/: log.csv
logs/controller_rl/xyz_sine_20251029_230314/: log.csv
logs/controller_rl/xyz_sine_20251029_232143/: log.csv
logs/controller_rl/xyz_sine_20251030_120744/: log.csv
logs/controller_rl/xyz_sine_20251030_120835/: log.csv
logs/controller_rl/xyz_sine_20251030_120936/: log.csv
logs/controller_rl/xyz_sine_20251030_122015/: log.csv
logs/controller_rl/xyz_sine_20251030_122144/: log.csv
logs/controller_rl/xyz_sine_20251030_122259/: log.csv
logs/controller_rl/xyz_sine_20251030_122757/: log.csv
logs/controller_rl/xyz_sine_20251030_123143/: log.csv
logs/controller_rl/xyz_sine_20251030_123741/: log.csv
logs/controller_rl/xyz_sine_20251030_124055/: log.csv
logs/controller_rl/xyz_sine_20251030_124159/: log.csv
logs/controller_rl/z_sin_20251029_231347/: log.csv
logs/controller_rl/z_sin_20251029_231418/: log.csv
logs/controller_rl/z_sin_20251030_122502/: log.csv
logs/controller_rl/z_sin_20251030_122613/: log.csv
logs/controller_ukf/hover_20251028_162406/: log.csv
plotting_tools/controller_ukf/: plot_control_frequency.py  plot_time_taken.py
simulation_assets/: modelFIP.sdf  modelLarge.sdf  modelLargePen.sdf  modelOmnicopter.sdf  modelPenDrone.sdf  modelTinyTrainer.sdf  modelUAV.sdf  pendulum.sdf  tbs_sourceone_v5.urdf  world_drone_env.sdf  world_inv_pen.sdf  world_large.sdf  world_omni.sdf  world_pen_drone.sdf  world_pole.sdf  world_tinytrainer.sdf  world_wind.sdf
simulation_assets/5x5_1000-0/: model-1_4.sdf  model-1_5.sdf  model.sdf
src/controller_inv_pen/: package.xml  setup.cfg  setup.py
src/controller_mpc/: package.xml  setup.cfg  setup.py
src/controller_omnicopter/: package.xml  setup.cfg  setup.py
src/controller_pid/: package.xml  setup.cfg  setup.py
src/controller_pid_landing_tests/: package.xml  setup.cfg  setup.py
src/controller_rl/: best_agent.pt  package.xml  setup.cfg  setup.py
src/controller_ukf/: package.xml  setup.cfg  setup.py
src/controller_wind_rl/: agent.yaml  package.xml  ppo_model.pt  setup.cfg  setup.py  skrl_ppo_cfg.yaml  wind_model.pth
src/drone_communication/: package.xml  setup.py
src/drone_visualisation/: CMakeLists.txt  package.xml  plugin_description.xml
src/drone_visualisation/include/drone_visualisation/: arm_panel.hpp
src/drone_visualisation/launch/: view_frame.launch.py
src/drone_visualisation/resource/: drone_visualisation
src/drone_visualisation/rviz/: default.rviz
src/drone_visualisation/src/: arm_panel.cpp
src/drone_visualisation/urdf/: frame.urdf
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ControlApplied.msg  ELRSCommand.msg  Telemetry.msg
src/simulation_communication/: package.xml  setup.cfg  setup.py
src/utility_objects/: __init__.py  package.xml  setup.cfg  setup.py
src/utility_objects/utility_objects/: callback_manager.py  data_logger.py  visualization.py
(+397 files in other folders)
