cmake_minimum_required(VERSION 3.11)
project(interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)  # Added std_msgs dependency
find_package(geometry_msgs REQUIRED)  # Added geometry_msgs dependency

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/MotionCaptureState.msg"
  "msg/ELRSCommand.msg"
  "msg/Telemetry.msg"
  "msg/InvertedPendulumStates.msg"
  "msg/ControlApplied.msg"
  "srv/SetArming.srv"
  DEPENDENCIES std_msgs geometry_msgs  # Specify dependencies here
)


ament_package()
